# peterbot-ai

./: Makefile  README-DOCKER.md  docker-compose.dev.yml  docker-compose.pip.yml  docker-compose.prod.yml  docker-compose.yml
client/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  firebaseConfig.ts  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite-env.t.ts  vite.config.ts
client/src/: App.tsx
client/src/components/: AIExperience.tsx  About.tsx  Chatbot.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  Skills.tsx  ThemeToggle.tsx
client/src/pages/: AdminPage.tsx  LoginPage.tsx
client/src/types/: types.ts
langgraph-api/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.pip  Dockerfile.prod  INSTALL.md  README.md  create_lock.sh  pyproject.toml  requirements.txt  run.py  setup.bat  setup_simple.py
langgraph-api/scripts/: check_firebase_data.py  dev.py  setup.py  test_api.py  test_config.py  test_search.py
langgraph-api/src/: __init__.py  main.py
langgraph-api/src/api/: __init__.py
langgraph-api/src/api/routes/: __init__.py  chat.py  documents.py  health.py  search.py
langgraph-api/src/config/: __init__.py  settings.py
langgraph-api/src/core/: __init__.py  agent.py  nodes.py  state.py
langgraph-api/src/models/: __init__.py  requests.py  responses.py
langgraph-api/src/services/: __init__.py  embeddings.py  firebase_vector_store.py
langgraph-api/src/utils/: __init__.py  logging.py
nginx/: apply-config.sh  peterbot.dev
